@@ -40,7 +40,7 @@ namespace video
 		//! applications must call this method before performing any rendering. returns false if failed.
 		virtual bool beginScene(bool backBuffer=true, bool zBuffer=true,
 				SColor color=SColor(255,0,0,0),
-				void* windowId=0,
+				const SExposedVideoData& videoData=SExposedVideoData(),
 				core::rect<s32>* sourceRect=0);
 
 		//! applications must call this method after performing any rendering. returns false if failed.
@@ -302,7 +302,7 @@ namespace video
 		IDirect3DSurface8* PrevRenderTarget;
 		core::dimension2d<u32> CurrentRendertargetSize;
 
-		void* WindowId;
+		HWND WindowId;
 		core::rect<s32>* SceneSourceRect;
 
 		D3DCAPS8 Caps;
